💄 project section 업데이트

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <br />
             프론트엔드 개발자 이윤슬의 포트폴리오 사이트입니다.
             <br />
-            이곳에서 저에 대해 자세히 알아가보세요.
+            이곳에서 저에 대해 알아가보세요.
           </p>
         </header>
         <div class="intro-body">
@@ -81,7 +81,7 @@
                 운영 중인 서비스의 프론트엔드 개발 환경을 React와 Next.js로
                 마이그레이션 하는 과정에 참여하여 기술을 빠르게 습득하고 적용한
                 경험이 있습니다. 기존 HTML, CSS, Javascript로 구성된 코드를
-                컴포넌트 기반으로 모듈화하는 과정을 통해 코드의 재사용성과
+                컴포넌트 기반으로 모듈화하는 과정을 통해 코드 재사용성과
                 유지보수성을 높일 수 있었습니다. 이 과정에서 프론트엔드 기술의
                 변천사를 몸소 체험하며 성장할 기회를 가질 수 있었습니다.
                 <br />
@@ -102,8 +102,8 @@
               <p class="about-item-description">
                 프론트엔드 개발의 즐거움은 코드로 화면을 구현하는 데 있다고
                 생각합니다. 특히 작은 움직임으로 사용자 행동에 피드백을 줄 수
-                있는 마이크로 인터랙션에 관심이 많습니다. 실제로 웹, 앱을
-                사용하며 흥미로운 인터랙션을 기억해 두고 서비스에 적용하여
+                있는 마이크로 인터랙션에 많은 관심을 가지고 있습니다. 실제로 웹,
+                앱을 사용하며 흥미로운 인터랙션을 기억해 두고 서비스에 적용하여
                 사용성을 개선하였습니다.
                 <br />
                 <br />
@@ -384,7 +384,7 @@
               </h3>
 
               <p class="notice">
-                * 회원 전용 사이트로 회원가입 후 로그인해야 이용할 수 있습니다.
+                * 회원 전용 사이트로 로그인 후 이용할 수 있습니다.
                 <br />
                 아래 테스트 계정을 사용하여 빠르게 확인해보세요.
               </p>
@@ -418,6 +418,44 @@
                 </ul>
               </div>
               <div class="project-detail">
+                <h4 class="project-detail-title">Preview</h4>
+                <ul class="project-detail-preview-list">
+                  <li class="project-detail-preview-item">
+                    <div class="preview-card">
+                      <div class="preview-card-image">
+                        <img
+                          src="./public/images/project-chak-blocks.jpg"
+                          alt="Chak Blocks 스토리북"
+                        />
+                      </div>
+                      <h5>UI 라이브러리 스토리북</h5>
+                    </div>
+                  </li>
+                  <li class="project-detail-preview-item">
+                    <div class="preview-card">
+                      <div class="preview-card-image">
+                        <img
+                          src="./public/images/project-chak-record.png"
+                          alt="책 기록 폼"
+                        />
+                      </div>
+                      <h5>독서 기록 Form</h5>
+                    </div>
+                  </li>
+                  <li class="project-detail-preview-item">
+                    <div class="preview-card">
+                      <div class="preview-card-image">
+                        <img
+                          src="./public/images/project-chak-infinite-scroll.gif"
+                          alt="무한 스크롤"
+                        />
+                      </div>
+                      <h5>무한 스크롤</h5>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="project-detail">
                 <h4 class="project-detail-title">Results & Lessons Learned</h4>
                 <ul class="project-detail-list">
                   <li class="project-detail-item">
@@ -443,13 +481,12 @@
                     <ul>
                       <li>
                         <i class="icon-twinkle"></i>
-                        Next.js App Router 방식을 통해 페이지 최초 렌더링 이후
-                        인터랙션에 걸리는 시간 최적화 및 데이터 캐싱을 통한 API
-                        호출 최적화.
+                        Next.js App Router 방식을 통해 JS 번들 사이즈 최적화 및
+                        데이터 캐싱을 통한 API 호출 최적화.
                       </li>
                       <li>
                         <i class="icon-twinkle"></i>
-                        JWT을 통한 사용자 인증 구현.
+                        JWT을 사용한 사용자 인증 구현.
                       </li>
                       <li>
                         <i class="icon-twinkle"></i>
@@ -469,7 +506,7 @@
                   </li>
                   <li class="project-detail-item">
                     <h5>
-                      3. 데이터 통신을 위한 express 서버 구축
+                      3. 데이터 통신을 위한 Express API 서버 구축
                       <a
                         href="https://github.com/ysisys0202/chak-api"
                         target="_blank"
