💄 project link UI 업데이트

--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
           <article class="project-box">
             <div class="project-box-content">
               <h3 class="project-box-title">
-                독서 기록 플랫폼 Chak (개인 프로젝트)
-                <a href="https://chak-client.vercel.app/" target="_blank"
-                  >(프로젝트 보러가기)</a
+                <a href="https://chak-client.vercel.app" target="_blank">
+                  독서 기록 플랫폼 Chak (개인 프로젝트)</a
                 >
+                <i class="icon-link"></i>
               </h3>
 
               <p class="notice">
@@ -428,7 +428,15 @@
                           alt="Chak Blocks 스토리북"
                         />
                       </div>
-                      <h5>UI 라이브러리 스토리북</h5>
+                      <h5>
+                        <a
+                          href="https://main--678d86d905c56bc74be0b58c.chromatic.com/?path=/docs/organism-accordion--docs"
+                          target="_blank"
+                        >
+                          UI 라이브러리 스토리북
+                          <i class="icon-link"></i
+                        ></a>
+                      </h5>
                     </div>
                   </li>
                   <li class="project-detail-preview-item">
@@ -465,7 +473,7 @@
                       <a
                         href="https://github.com/ysisys0202/chak-blocks"
                         target="_blank"
-                        >(깃허브 보러가기)</a
+                        >(깃허브 <i class="icon-link"></i>)</a
                       >
                     </h5>
                   </li>
@@ -475,7 +483,7 @@
                       <a
                         href="https://github.com/ysisys0202/chak-client"
                         target="_blank"
-                        >(깃허브 보러가기)</a
+                        >(깃허브 <i class="icon-link"></i>)</a
                       >
                     </h5>
                     <ul>
@@ -510,7 +518,7 @@
                       <a
                         href="https://github.com/ysisys0202/chak-api"
                         target="_blank"
-                        >(깃허브 보러가기)</a
+                        >(깃허브 <i class="icon-link"></i>)</a
                       >
                     </h5>
                   </li>
