deploy: a81ddace71bf91cacd4e020b1de376f48e6ddfe3

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             <li class="description-item">
               <i class="icon-twinkle"></i>
               <p>
-                Next.js의 Page Router, App Router 방식에서의 SSR을 활용하여초기
-                페이지 로딩 속도 향상 및 SEO 개선.
+                Next.js의 Page Router, App Router 방식에서의 SSR, SSG, ISG
+                페이지 렌더링 방식을 활용하여 페이지 로딩 속도 향상 및 SEO 개선.
               </p>
             </li>
             <li class="description-item">
@@ -251,8 +251,8 @@
                         <i class="icon-twinkle"></i>
                         상품 카드 컴포넌트 개발 시 페이지, 섹션에 따라 구성
                         요소가 조금씩 달라져 컴포넌트의 복잡성 증가. 아토믹
-                        디자인 패턴 도입하여 분리한 컴포넌트를 조합하는 방식으로
-                        코드 복잡성을 낮추고 재사용성을 높임.
+                        디자인 패턴을 도입하여 분리한 컴포넌트를 조합하는
+                        방식으로 코드 복잡성을 낮추고 재사용성을 높임.
                       </li>
                     </ul>
                   </li>
