--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./public/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>FE 이윤슬 포트폴리오</title>
+    <title>프론트엔드 개발자 이윤슬 포트폴리오</title>
+    <meta
+      name="description"
+      content="프론트엔드 개발자 이윤슬 포트폴리오 사이트입니다."
+    />
+    <meta property="og:image" content="./public/images/portfolio_og.jpg" />
   </head>
   <body>
     <main>
