--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M785.5 7256C888.5 7228 1162.19 7193.1 1161.5 6973.31C1160.53 6663.32 226.782 6264.74 142.197 6078C57.6127 5891.26 108.287 5697.1 417.951 5385.5C540.755 5307.61 820.611 5067.21 847.666 4921.62C874.721 4776.02 795.247 4474.25 485.659 4324.71C176.071 4175.16 164.82 3776.67 387.02 3652.97C609.219 3529.26 883.12 3303.89 846.88 3071.99C810.641 2840.08 452.776 2607.69 364.108 2564.96C275.44 2522.23 16.8112 2353.53 93.505 2086.27C170.199 1819.01 408.793 1819.77 634.152 1746.56C859.511 1673.35 819.986 1510.46 544.608 1423.81C269.23 1337.17 339.201 999.425 543.007 912.281C746.814 825.137 1035.85 640.219 984.034 386.363C972.356 320.742 916.1 179.7 784.5 140.5"
+            d="M756.5 7310C859.5 7282 1162.19 7193.1 1161.5 6973.31C1160.53 6663.32 226.782 6264.74 142.197 6078C57.6127 5891.26 108.287 5697.1 417.951 5385.5C540.755 5307.61 820.611 5067.21 847.666 4921.62C874.721 4776.02 795.247 4474.25 485.659 4324.71C176.071 4175.16 164.82 3776.67 387.02 3652.97C609.219 3529.26 883.12 3303.89 846.88 3071.99C810.641 2840.08 452.776 2607.69 364.108 2564.96C275.44 2522.23 16.8112 2353.53 93.505 2086.27C170.199 1819.01 408.793 1819.77 634.152 1746.56C859.511 1673.35 819.986 1510.46 544.608 1423.81C269.23 1337.17 339.201 999.425 543.007 912.281C746.814 825.137 1035.85 640.219 984.034 386.363C972.356 320.742 916.1 179.7 784.5 140.5"
             stroke="#00FF51"
           />
         </svg>
@@ -216,8 +216,10 @@
         </header>
         <div class="section-body">
           <article class="project-box">
-            <div class="project-box-content">
+            <header class="project-box-header">
               <h3 class="project-box-title">메인 페이지 리뉴얼</h3>
+            </header>
+            <div class="project-box-content">
               <div class="project-detail">
                 <h4 class="project-detail-title">Overview</h4>
                 <ul class="project-detail-list">
@@ -304,8 +306,10 @@
             </div>
           </article>
           <article class="project-box">
-            <div class="project-box-content">
+            <header class="project-box-header">
               <h3 class="project-box-title">토너먼트 이벤트 페이지 제작</h3>
+            </header>
+            <div class="project-box-content">
               <div class="project-detail">
                 <h4 class="project-detail-title">Overview</h4>
                 <ul class="project-detail-list">
@@ -381,14 +385,13 @@
             </div>
           </article>
           <article class="project-box">
-            <div class="project-box-content">
+            <header class="project-box-header">
               <h3 class="project-box-title">
                 <a href="https://chak-client.vercel.app" target="_blank">
                   독서 기록 플랫폼 Chak (개인 프로젝트)</a
                 >
                 <i class="icon-link"></i>
               </h3>
-
               <p class="notice">
                 * 회원 전용 사이트로 로그인 후 이용할 수 있습니다.
                 <br />
@@ -404,6 +407,8 @@
                   <td>password</td>
                 </tr>
               </table>
+            </header>
+            <div class="project-box-content">
               <div class="project-detail">
                 <h4 class="project-detail-title">Overview</h4>
                 <ul class="project-detail-list">
