📝 project title 수정

--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
         <div class="section-body">
           <article class="project-box">
             <header class="project-box-header">
-              <h3 class="project-box-title">메인 페이지 리뉴얼</h3>
+              <h3 class="project-box-title">
+                메인 페이지 리뉴얼 (인테리어티쳐)
+              </h3>
             </header>
             <div class="project-box-content">
               <div class="project-detail">
@@ -307,7 +309,9 @@
           </article>
           <article class="project-box">
             <header class="project-box-header">
-              <h3 class="project-box-title">토너먼트 이벤트 페이지 제작</h3>
+              <h3 class="project-box-title">
+                토너먼트 이벤트 페이지 제작(인테리어티쳐)
+              </h3>
             </header>
             <div class="project-box-content">
               <div class="project-detail">
