deploy: 08563941ea43a93e0bf2c6da8bf67e30f2f506e2

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                       </li>
                       <li>
                         <i class="icon-twinkle"></i>
-                        아코디언, 탭 메뉴와 같은 컴포넌트 구현 시 컴파운트
-                        패턴을 통해 prop drilling을 피하고 유연하게 UI를 조합할
+                        아코디언, 탭 메뉴와 같은 컴포넌트 구현 시 컴파운드d
+                        패턴을 통해 Props Drilling을 피하고 유연하게 UI를 조합할
                         수 있도록 지원하여 코드 확장성을 높임.
                       </li>
                       <li>
