--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                 <br />
                 <br />
                 이런 과정에서 비개발 직군과의 원활한 의사소통을 위해 스토리북을
-                도입하여 리액트 컴포넌트 구현 사항을 공유하였고, 또한 협업에
-                있어 다른 직군에 대한 지식의 필요성을 크게 체감하여 Express로
-                API 서버를 직접 구축해 보며 백엔드 지식을 학습하였습니다.
+                도입하였고, 또한 협업에 있어 다른 직군에 대한 지식의 필요성을
+                크게 체감하여 Express로 API 서버를 직접 구축해 보며 백엔드
+                지식을 학습하였습니다.
                 <br />
                 <br />
                 개발자이기 전에 함께 목표를 이루어나가는 동료로서 원활한 협업을
@@ -189,7 +189,7 @@
             <li class="description-item">
               <i class="icon-twinkle"></i>
               <p>
-                Next.js의 Page Router, App Router 방식에서의 SSR, SSG, ISG
+                Next.js의 Page Router, App Router 방식에서의 SSR, SSG, ISR
                 페이지 렌더링 방식을 활용하여 페이지 로딩 속도 향상 및 SEO 개선.
               </p>
             </li>
